--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-dropzone": "^3.12.1",
+    "react-modal": "^1.7.3",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
